<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rmf_inorbit_template</name>
  <version>0.1.0</version>
  <description>Template configuration package for rmf_inorbit_fleet_adapter</description>
  <author email="julian@inorbit.ai">Julian Cerruti</author>
  <author email="tomasbadenes@gmail.com">Tomás Badenes</author>
  <maintainer email="julian@inorbit.ai">Julian Cerruti</maintainer>
  <url type="repository">https://github.com/inorbit-ai/rmf_inorbit_examples</url>
  <license file="LICENSE">3-Clause BSD License</license>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>rmf_inorbit_fleet_adapter</exec_depend>
  <exec_depend>rmf_inorbit_demos</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
